@@ -1,3 +1,7 @@
+2006-11-22  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-edit-definition): Don't hide error messages.
+
 2006-11-21  Helmut Eller  <heller@common-lisp.net>
 
 	* swank.lisp (*coding-system*): "Coding systems" are now strings
